--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="romy" src="/ui/Romario.jpg" class="img-medium"/>
+            <img id='romy' src="/ui/Romario.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
