--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Romario Remmy.
         </div>
+        <input type="text" id="comment" placeholder="Comments"/>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
